# BSW

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-skeleton-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-SECURITY.md  01-VERIFICATION.md  deferred-items.md
.planning/phases/02-line-provider-domain/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 20260515_0001_bets_initial.py  20260518_0002_bets_settled_columns.py
src/bet_maker/: __main__.py  alembic.ini  app.py  lifespan.py
src/config/: __init__.py  logging.py  settings_base.py
src/line_provider/: __main__.py  app.py  lifespan.py  middleware.py
tests/: conftest.py
tests/audit/: __init__.py  test_static.py
tests/bet_maker/: conftest.py  test_alembic.py  test_asyncapi_smoke.py  test_bet_routes.py  test_db_engine.py  test_e2e_rabbitmq.py  test_error_detail.py  test_event_lookup.py  test_events_routes.py  test_health.py  test_health_reconciler.py  test_http_event_lookup.py  test_lifespan.py  test_lifespan_reconciler.py  test_line_provider_client.py  test_list_active_events.py  test_messaging.py  test_models.py  test_place_bet.py  test_repositories.py  test_schemas.py  test_selectors.py  test_settings.py  test_settle.py  test_uow.py
tests/contract/: test_event_finished_message_schema.py
tests/line_provider/: _fakes.py  conftest.py  test_asyncapi_smoke.py  test_create_event.py  test_error_detail.py  test_event_bus.py  test_event_routes.py  test_facades.py  test_health.py  test_in_memory_store.py  test_lifespan.py  test_schemas.py  test_selectors.py  test_set_event_state.py  test_state_machine.py
(+230 files in other folders)
