[project]
name = "bsw"
version = "0.1.0"
description = "BSW Betting System — two async Python microservices for a sports-betting test task"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "Dmitry Dankov" }]
dependencies = [
    "fastapi>=0.115,<0.137",
    "uvicorn[standard]>=0.46,<0.47",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "faststream[rabbit]>=0.6,<0.7",
    "sqlalchemy[asyncio]>=2.0.40,<2.1",
    "asyncpg>=0.31,<0.32",
    "alembic>=1.18,<2",
    "httpx>=0.28,<0.29",
    "tenacity>=9.1,<10",
    "structlog>=25.5,<26",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.1,<2",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15,<0.16",
    "mypy>=2.1,<3",
    "pre-commit>=4.6,<5",
    "asgi-lifespan>=2.1,<3",
    "testcontainers>=4.9,<5",
    "respx>=0.22,<0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/line_provider", "src/bet_maker", "src/config"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "ASYNC", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
"alembic/versions/*.py" = ["E501", "N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.10"
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.uv]
package = true

[tool.coverage.run]
source = ["src/line_provider", "src/bet_maker"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
